--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
     "gist-client": "^1.1.1",
+    "handlebars": "^4.7.8",
+    "handlebars-loader": "^1.7.3",
     "jquery": "^3.6.4",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
